# FMI-UNI

./: .gitignore  README.md  readmee.md
ASI/: vuprosnik.txt
Blockchain/: 5April23.txt  Lecture3.md  students.txt
DB/: Курсов_Проект_Магазаин_За_Компютърна_Техника_62371_62527_62529.rar  Магазин_За_Компютърна_Техника.docx
IS/homeworks/CLionHomeworks/: CMakeLists.txt  main.cpp
IS/homeworks/CLionHomeworks/id3/: f  id3.cpp  sol  sol1
IS/homeworks/CLionHomeworks/kMeans/: centroids.csv  kMeans.cpp  normal_plus_plus.csv  unbalance.csv  visualization.ipynb
IS/homeworks/CLionHomeworks/kMeans/normal/: normal.txt
IS/homeworks/CLionHomeworks/kMeans/remaked_info/: normal_coordinates.csv
IS/homeworks/CLionHomeworks/n-sliding-puzzle/: n-sliding-puzzle.cpp
IS/homeworks/CLionHomeworks/naive-bayes/: naive-bayes.cpp
IS/homeworks/CLionHomeworks/nought_and_crosses/: nought_and_crosses.cpp
IS/homeworks/CLionHomeworks/nqueens/: nqueens.cpp
IS/homeworks/CLionHomeworks/tsp/: tsp.cpp
IoT/: Lection1-02.03.2023.txt  Lecture2-09.03.2023.md  Lecture3-06.04.2023.txt
OOP/2/: main.cpp  (+11 more)
OOP/OOP_Redoven4_1/: CMakeLists.txt  Message.cpp  Message.hpp  MovingAverager.cpp  MovingAverager.hpp  PeriodicSampler.cpp  PeriodicSampler.hpp  Publisher.cpp  Publisher.hpp  Repository.hpp  SimplePublisher.cpp  SimplePublisher.hpp  Subscriber.cpp  Subscriber.hpp
OS/: c.tar.xz  shell-part.tar.xz
PBezP/: .Lecture-10.03.2023.txt.swp  Lecture-10.03.2023.txt
advanced_javascript/: 7.10.2023-Lection.md  Lection2.md  equation.js  test.js  test1.js
python_ml/: 1.md  info  new.py  p.ipynb  test.py
(+298 files in other folders)
